feat: implement delete functionality in ProductServiceImpl and fix responseDTO mapping